--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,1 @@
-
-# Created by https://www.gitignore.io/api/visualstudiocode
-
-### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history
-
-# End of https://www.gitignore.io/api/visualstudiocode
+深入理解Java虚拟机读书笔记/.vscode/settings.json
